[gd_scene load_steps=27 format=3 uid="uid://c7cnruliscqn1"]

[ext_resource type="Script" path="res://scenes/levels/Level5.gd" id="1_jn466"]
[ext_resource type="PackedScene" uid="uid://bw4siilxufwyk" path="res://scenes/char/ship.tscn" id="2_d860p"]
[ext_resource type="Texture2D" uid="uid://dbg24fyq3s4q6" path="res://gfx/abstract/square.png" id="3_x0mim"]
[ext_resource type="AudioStream" uid="uid://dmhgc5aw6vyyw" path="res://sfx/voices/robot/WARNING.ogg" id="5_cayvn"]
[ext_resource type="PackedScene" uid="uid://cykug4alhxyx5" path="res://scenes/util/delayed_audio_stream_player.tscn" id="6_7y4rq"]
[ext_resource type="AudioStream" uid="uid://cfcjgtgqqh0c6" path="res://sfx/voices/shepard/damntheseinsurance.ogg" id="7_ub2au"]
[ext_resource type="AudioStream" uid="uid://bmfvb7wgiwrqq" path="res://sfx/voices/shepard/lights1.ogg" id="8_t1dfa"]
[ext_resource type="AudioStream" uid="uid://btkjybcqj11ht" path="res://sfx/voices/shepard/lights2.ogg" id="9_7xh2q"]
[ext_resource type="AudioStream" uid="uid://qa4fipc12yyc" path="res://sfx/voices/shepard/lights3.ogg" id="10_tg42k"]
[ext_resource type="Texture2D" uid="uid://vl82ii1fockc" path="res://gfx/abstract/arc.png" id="11_fojk4"]
[ext_resource type="AudioStream" uid="uid://67qp36nmbe66" path="res://sfx/voices/shepard/lights4.ogg" id="11_hb1c1"]
[ext_resource type="Script" path="res://scenes/util/InstantKill.gd" id="12_qgdwt"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_2l01y"]
b = Vector2(1280, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_n4s1y"]
b = Vector2(0, 720)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_6b3ub"]
b = Vector2(1280, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_mxyi1"]
b = Vector2(0, 720)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4e25h"]
emission_shape = 3
emission_box_extents = Vector3(640, 1, 1)
particle_flag_disable_z = true
direction = Vector3(0, 1, 0)
spread = 0.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 500.0
initial_velocity_max = 1000.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_max = 4.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tv1yd"]
size = Vector2(3786, 31.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ir78t"]
size = Vector2(63.5, 2730.75)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_677xc"]
streams_count = 4
random_pitch = 1.0
stream_0/stream = ExtResource("8_t1dfa")
stream_0/weight = 1.0
stream_1/stream = ExtResource("9_7xh2q")
stream_1/weight = 1.0
stream_2/stream = ExtResource("10_tg42k")
stream_2/weight = 1.0
stream_3/stream = ExtResource("11_hb1c1")
stream_3/weight = 1.0

[sub_resource type="Animation" id="Animation_44uyc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sounds/WARNING:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sounds/lightsup:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_8gs68"]
resource_name = "opening"
length = 9.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sounds/WARNING:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(2.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sounds/lightsup:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(7.8),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dgn5p"]
_data = {
"RESET": SubResource("Animation_44uyc"),
"opening": SubResource("Animation_8gs68")
}

[sub_resource type="Animation" id="Animation_aps68"]
resource_name = "move"
length = 35.0
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("explosion/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5, 33, 35),
"transitions": PackedFloat32Array(1, 1, 2, 1),
"update": 0,
"values": [Vector2(0, 1792), Vector2(0, 1792), Vector2(0, 2424), Vector2(0, 2112)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("explosion/Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5, 33, 35),
"transitions": PackedFloat32Array(1, 1, 4, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(2, 2), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("explosion/Sprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 30.66, 30.69, 30.9102, 30.9301, 31.488, 31.88, 31.9264, 31.98, 32.0219, 32.0545, 32.09, 33.4, 33.4408, 34.4171, 34.7957),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, true, false, true, false, true, false, true, false, true, true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:shake_amount")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 5, 31, 34),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 20.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uidno"]
_data = {
"move": SubResource("Animation_aps68")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_roavt"]
radius = 992.0

[node name="Level5" type="Node2D"]
script = ExtResource("1_jn466")
shake_amount = 10.0

[node name="Ship" parent="." instance=ExtResource("2_d860p")]
position = Vector2(640, 600)
low_booster_active = true
strong_booster_active = true

[node name="WorldBoundary" type="StaticBody2D" parent="."]

[node name="Up" type="CollisionShape2D" parent="WorldBoundary"]
shape = SubResource("SegmentShape2D_2l01y")

[node name="Left" type="CollisionShape2D" parent="WorldBoundary"]
position = Vector2(40, 0)
shape = SubResource("SegmentShape2D_n4s1y")

[node name="Down" type="CollisionShape2D" parent="WorldBoundary"]
position = Vector2(0, 720)
shape = SubResource("SegmentShape2D_6b3ub")

[node name="Right" type="CollisionShape2D" parent="WorldBoundary"]
position = Vector2(1240, 0)
shape = SubResource("SegmentShape2D_mxyi1")

[node name="bg" type="CanvasLayer" parent="."]
layer = -10

[node name="GPUParticles2D" type="GPUParticles2D" parent="bg"]
position = Vector2(640, -16)
amount = 96
process_material = SubResource("ParticleProcessMaterial_4e25h")
texture = ExtResource("3_x0mim")
lifetime = 2.0

[node name="AsteroidSpawnTimer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="AreaKillAsteroids" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="up" type="CollisionShape2D" parent="AreaKillAsteroids"]
position = Vector2(703, -1052)
shape = SubResource("RectangleShape2D_tv1yd")

[node name="left" type="CollisionShape2D" parent="AreaKillAsteroids"]
position = Vector2(-512, 330)
shape = SubResource("RectangleShape2D_ir78t")

[node name="down" type="CollisionShape2D" parent="AreaKillAsteroids"]
position = Vector2(715, 976)
shape = SubResource("RectangleShape2D_tv1yd")

[node name="right" type="CollisionShape2D" parent="AreaKillAsteroids"]
position = Vector2(1792, 330)
shape = SubResource("RectangleShape2D_ir78t")

[node name="Sounds" type="Node" parent="."]

[node name="WARNING" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("5_cayvn")
bus = &"Robot Comms"

[node name="DelayedAudioStreamPlayer" parent="Sounds" instance=ExtResource("6_7y4rq")]
stream = ExtResource("7_ub2au")
bus = &"Comms"

[node name="lightsup" type="AudioStreamPlayer" parent="Sounds"]
stream = SubResource("AudioStreamRandomizer_677xc")
bus = &"Comms"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "opening"
libraries = {
"": SubResource("AnimationLibrary_dgn5p")
}

[node name="explosion" type="Node2D" parent="."]
position = Vector2(640, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="explosion"]
root_node = NodePath("../..")
autoplay = "move"
libraries = {
"": SubResource("AnimationLibrary_uidno")
}

[node name="Sprite2D" type="Sprite2D" parent="explosion"]
position = Vector2(0, 2112)
texture = ExtResource("11_fojk4")
offset = Vector2(0, -512)

[node name="kill" type="Area2D" parent="explosion/Sprite2D"]
script = ExtResource("12_qgdwt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="explosion/Sprite2D/kill"]
shape = SubResource("CircleShape2D_roavt")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(640, 360)

[connection signal="timeout" from="AsteroidSpawnTimer" to="." method="_on_asteroid_spawn_timer_timeout"]
[connection signal="body_entered" from="AreaKillAsteroids" to="." method="_on_area_kill_asteroids_body_entered"]
[connection signal="animation_finished" from="explosion/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
